sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:9: error: ';' expected but '=' found.
    (baseJoueur, posJoueur) = trouverJoueur(i);
                            ^