sort.baseball.SelectBaseball.scala.code
override def run()
{
  var nbBases = getNombreBases();
  var posJoueur = 0;
  var baseJoueur = 0;
  
  for (i <- 0 to nbBases-1)
  {
    (baseJoueur, posJoueur) = trouverJoueur(i);
    
    deplacerTrou(baseJoueur+1);
    deplace(baseJoueur, posJoueur);
  }
}


def trouverJoueur(couleur:Int):(Int,Int) =
{
  var nbBases = getNombreBases();
  var nbPos = getNombrePositions();
  
  for (i <- 0 to nbBases-1)
  {
    for (j <- 0 to nbPos-1)
    {
      if (getCouleurJoueur(i,j) != couleur) return (i,j);
    }
  }
  return (-1, -1);
}

def deplacerTrou(arrive:Int, sens:Int) //sens:-1 ou 1
{
  if (arrive == getTrouBase()) return;
  
  var nbBases = getNombreBases();
  var nbPos = getNombrePositions();
  var currBase = getTrouBase()+sens;
  
	for (i <- 0 to nbPos-1)
  {
    if (getCouleurJoueur(currBase+1, i) != currBase)
    {
      deplace(currBase, i);
      deplacerTrou(arrive, sens);
      return;
    }
  }
  
  deplacerTrou(arrive, -sens);
}